# SkiaFly

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
scripts/: build_skia.sh
src/: CMakeLists.txt
src/demos/: CMakeLists.txt  bitmap_allocPixels.cpp  demo.h  demos.cpp  draw_basic_shape.cpp  draw_local_image.cpp
src/utils/: CMakeLists.txt  file_utils.cpp  file_utils.h
